<resources>
    <string name="app_name">SecondLargestNumber</string>
    <string name="enter_a_number">Enter a Number</string>
    <string name="add">Add</string>
    <string name="_100">100</string>
    <string name="your_numbers">Your Numbers</string>
    <string name="second_largest_number">Second Largest Number</string>
    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="second_largest_number_is">Second Largest Number is :</string>
    <string name="entered_numbers">Entered Numbers :</string>
    <string name="data_show">Add some Numbers</string>
    <string name="my_id">my_id</string>
    <string name="delete">delete</string>
</resources>