<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#0091EA">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/second_largest_number"
            android:textColor="#FFF"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="100dp" />

    <EditText
        android:id="@+id/number_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/add_number"
        android:hint="@string/enter_a_number"
        android:importantForAutofill="no"
        android:inputType="number" />

    <ImageView
        android:id="@+id/add_number"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/clear"
        android:contentDescription="@string/add"
        android:src="@drawable/add" />

    <Button
        android:id="@+id/clear"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_style"
        android:text="@string/clear"
        android:textColor="#FFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/result"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@id/clear"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_style"
        android:text="@string/result"
        android:textColor="#FFF"
        android:textSize="12sp" />
</RelativeLayout>